--- a/src/App.css
+++ b/src/App.css
@@ -46,11 +46,27 @@
   align-items: center;
 }
 .square {
-  text-align: center;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid black;
+  display: grid;
+  border: 2px solid black;
   width: 200px;
   height: 200px;
   border-radius: 2rem;
+  place-content: center;
+}
+.square p {
+  text-align: center;
+}
+label {
+  position: absolute;
+  left: -99999px;
+}
+input[type="text"] {
+  margin-top: 0.5rem;
+  width: 100px;
+  font-size: 1rem;
+  box-shadow: 2px 2px 5px #000;
+  outline: none;
+}
+form {
+  width: 400px;
 }
