--- a/src/App.css
+++ b/src/App.css
@@ -70,3 +70,9 @@ input[type="text"] {
 form {
   width: 400px;
 }
+.mamad {
+  width: 300px;
+  height: 300px;
+  border: 2px solid rgb(0, 0, 0);
+  border-radius: 2rem;
+}
